# ASCO_Visualizer

./: .gitignore  ASCO_Visualizer.pro  CMakeLists.txt  README.md  displayer.cpp  displayer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: asco_design_variable.cpp  asco_design_variable.hpp  asco_design_variable_properties.cpp  asco_design_variable_properties.hpp  asco_handler.cpp  asco_handler.hpp  asco_measurement.cpp  asco_measurement.hpp  asco_measurement_properties.cpp  asco_measurement_properties.hpp  asco_parameter.cpp  asco_parameter.h  asco_parameter_properties.cpp  asco_parameter_properties.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qucs_dat.cpp  qucs_dat.hpp
